--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
     <script src="../node_modules/mocha/mocha.js"></script>
     <script>mocha.setup({ui: 'bdd', timeout: 20000})</script>
 
-    <script src="../build/blockchainjs.test.js"></script>
+    <script src="./blockchainjs.test.js"></script>
 
     <script>
       if (window.mochaPhantomJS) {
