--- a/test/index.html
+++ b/test/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="mocha"></div>
     <script src="../node_modules/mocha/mocha.js"></script>
-    <script>mocha.setup({ui: 'bdd', timeout: 20000})</script>
+    <script>mocha.setup({ui: 'bdd'})</script>
 
-    <script src="./blockchainjs.test.js"></script>
+    <script src="../blockchainjs.test.js"></script>
 
     <script>
       if (window.mochaPhantomJS) {
